--- a/software/fru/rtm-lamp-v1.0-produza-fru.yml
+++ b/software/fru/rtm-lamp-v1.0-produza-fru.yml
@@ -1,13 +1,14 @@
 BoardInfo:
   mfg_date_time: 2021-09-24 15:00:00
   manufacturer: Produza
-  product_name: 'RTM-LAMP:1.0'
+  product_name: 'RTM-LAMP'
   serial_number: 'CN00001'
-  part_number: 'RTM-LAMP'
+  part_number: 'RTM-LAMP:1.0'
 
 ProductInfo:
   manufacturer: CNPEM
   product_name: 'RTM-LAMP'
+  part_number: 'RTM-LAMP:1.0'
   version: '1.0'
   serial_number: 'CN00001'
   asset_tag: CN00001
